01_reverse-proxy/ingress/reverse-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy-ingress
  namespace: reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: reverse-proxy
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reverse-proxy-apl
            port:
              number: 8080
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: reverse-proxy-apl
            port:
              number: 8080
